[package]
name = "svm-station-genesis-utils"
description = "Solana Genesis Utils"
documentation = "https://docs.rs/solana-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
solana-accounts-db = { workspace = true }
solana-download-utils = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "svm_station_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
