[package]
name = "solana-accountsdb-plugin-postgres"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
bs58 = "0.5.0"
bytemuck = "1.14.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.11"
hex = "0.4.3"
log = "0.4.20"
openssl = "0.10.63"
postgres = "0.19.0"
postgres-openssl = "0.5.0"
postgres-types = "0.2.6"
rusqlite = "0.30.0"
serde = "1.0.195"
serde_derive = "1.0.193"
serde_json = "1.0.108"
solana-account-decoder = {workspace = true }
solana-entry = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-ledger = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
sparse-merkle-tree = "0.6.1"
thiserror = "1.0.50"
tokio-postgres = "0.7.10"
