[package]
name = "station-svm-sequencer"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
crossbeam-channel = "0.5.12"
itertools = "0.12.1"
log = "0.4.21"
symlink = "0.1.0"
rocksdb = "0.21.0"
serde_json = "1.0.114"
air-solana = { workspace = true }
clap = { workspace = true }
solana-accounts-db = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-core = { workspace = true }
solana-faucet = { workspace = true }
solana-net-utils = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-validator = { workspace = true }
solana-version = { workspace = true }
