[package]
name = "svm-geyser"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam-channel = "0.5.7"
log = "0.4.17"
openssl = { version = "0.10.42" }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
r2d2 = "0.8.10"
solana-geyser-plugin-interface = { path = "../geyser-plugin-interface" }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = "1.0.37"
tokio-postgres = "0.7.7"
rocksdb = "0.21.0"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { workspace = true }
solana-core = { workspace = true }
solana-local-cluster = { workspace = true }
solana-net-utils = { workspace = true }
solana-streamer = { workspace = true }
tempfile = "3.3.0"


