[package]
name = "svm-seq"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bs58 = "0.5.0"
borsh = "1.3.1"
rocksdb = "0.21.0"
rayon = "1.8.1"
solana-client = { workspace = true }
solana-cli-output = { workspace = true }
solana-rpc = {workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = "1.29.1"
tokio-postgres = "0.7.10"
log = "0.4.20"
serde = "1.0.195"
serde_derive = "1.0.193"
serde_json = "1.0.108"
bytes = "1.5.0"
lazy_static = "1.4.0"