[package]
name = "svm-seq"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
air-solana = { workspace = true }
bs58 = "0.5.0"
borsh = "1.3.1"
bincode = { workspace = true }
clap = { workspace = true }
rocksdb = "0.21.0"
rayon = "1.8.1"
solana-client = { workspace = true }
solana-cli-output = { workspace = true }
solana-rpc = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-accounts-db = { workspace = true }
solana-clap-utils = { workspace = true }
solana-core = { workspace = true }
solana-faucet = { workspace = true }
solana-ledger = { workspace = true }
solana-net-utils = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-runtime = { workspace = true }
solana-send-transaction-service = { workspace = true }
solana-tpu-client = { workspace = true }
solana-perf = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-cli-config = { workspace = true }
solana-version = { workspace = true }
solana-streamer = { workspace = true }
core_affinity = { workspace = true }
num_cpus = { workspace = true }
log = "0.4.20"
reqwest = "0.11.23"
serde = "1.0.195"
serde_derive = "1.0.193"
serde_json = "1.0.108"
bytes = "1.5.0"
lazy_static = "1.4.0"
base64 = "0.21.5"
symlink = { workspace = true }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
solana-rpc-client = { workspace = true }
ed25519-dalek = "1.0.1"
solana-geyser-plugin-interface = { path = "../geyser-plugin-interface" }
solana-validator = { workspace = true }
hex = "0.4.3"
tokio = "1.29.1"
cbindgen = "0.26.0"
thiserror = "1.0.50"

[target."cfg(unix)".dependencies]
libc = { workspace = true }
